--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,5 +16,5 @@ jobs:
       - run: make setup
       - run: make lint
       - env:
-          API_KEY: ${{ secrets.API_KEY }}
+          API_KEY: "1337"
         run: make test
