--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ python-dotenv = "^0.21.0"
 numpy = "^1.23.5"
 dill = "^0.3.6"
 pandas = "^1.5.2"
+implicit = "^0.6.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
