--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ starlette = "^0.14.2"
 python-dotenv = "^0.21.0"
 numpy = "^1.23.5"
 dill = "^0.3.6"
+implicit = "^0.6.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
